# emu68-gic400-library

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  RELEASE-NOTES.md  package-lock.cmake
.github/workflows/: versioning.yml
cmake/: CPM-init.cmake  GIC400Config.cmake.in  GenerateSfdHeaders.cmake
include/: gic400.h  gic400_private.h
include/clib/: gic400_protos.h
include/inline/: gic400.h
include/libraries/: gic400.h
include/pragmas/: gic400_pragmas.h
include/proto/: gic400.h
sfd/: gic400.sfd  gic400_lib.sfd  make.sh
src/: gic400.c  gic400_api.c  gic400_distributor.c  gic400_end.c  gic400_main.c
